# pros

./: .arcconfig  .arclint  .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.template.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  Doxyfile  Jenkinsfile  LICENSE  Makefile  README.md  STYLEGUIDE.md  TRAINING.md  VSCode.md  azure-build-libc.yaml  azure-pipelines.yml  build.sh  common.mk  libv5rts-strip-options.txt  patch_headers.py  project.pros  pros-ld-timestamp.sh  public.txt  public_symbols.txt  template-Makefile  template-gitignore  toolchain.cmake  user.css  verify-symbols.sh  version  version.py
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml  pull_request.yml
cmake/: FindV5rts.cmake  arm-none-eabi-binutils.cmake  arm-none-eabi-toolchain.cmake  pros-common-tasks.cmake  version.cmake
firmware/: timestamp.c.in  v5-common.ld  v5-hot.ld  v5.ld
include/: API.h  FreeRTOS.h  api.h  api.h.in  apix.h  comm.h  comp_state.h  cortex.h  fs.h  invoke.h  kapi.h  kernel.h  list.h  main.h  periph.h  queue.h  semphr.h  supervisor.h  task.h  taskpriv.h  watchdog.h  wave.h
include/common/: cobs.h  gid.h  set.h  (+2 more)
src/: API.c  CMakeLists.txt  auto.c  autonomous.c  autonomous.cpp  comm.c  encoder.c  encoder_isr.s  fs.c  gyro.c  i2c.c  ime.c  init.c  initialize.c  initialize.cpp  invoke.c  io.c  kernel.c  list.c  main.cpp  malloc.c  motorcontrol.c  new.cpp  opcontrol.c  opcontrol.cpp  printf.c  pwm.c  queue.c  semphr.c  startup.s  supervisor.c  system.c  tasks.c  ultrasonic.c  watchdog.c  wave.c
src/common/: README.md  cobs.c  gid.c  linkedlist.c  set.c  string.c
src/devices/: README.md  battery.c  battery.cpp  controller.c  controller.cpp  device.cpp  registry.c  screen.c  screen.cpp  vdml.c  vdml_adi.c  vdml_adi.cpp  vdml_aivision.c  vdml_device.c  vdml_device.cpp  vdml_distance.c  vdml_distance.cpp  vdml_ext_adi.c  vdml_ext_adi.cpp  vdml_gps.c  vdml_gps.cpp  vdml_imu.c  vdml_imu.cpp  vdml_link.c  vdml_link.cpp  vdml_motorgroup.cpp  vdml_motors.c  vdml_motors.cpp  vdml_optical.c  vdml_optical.cpp  vdml_rotation.c  vdml_rotation.cpp  vdml_serial.c  vdml_serial.cpp  vdml_usd.c  vdml_usd.cpp  vdml_vision.c  vdml_vision.cpp
src/display/: CMakeLists.txt  README.md  display.c  error.c  graphics.c  llemu.c  llemu.cpp  screen.c  tmei.c  tmei.cpp
src/display/lv_core/: lv_group.c  lv_indev.c  lv_lang.c  lv_obj.c  lv_refr.c  lv_style.c  lv_vdb.c
src/display/lv_draw/: lv_draw.c  lv_draw_arc.c  lv_draw_img.c  lv_draw_label.c  lv_draw_line.c  lv_draw_rbasic.c  lv_draw_rect.c  lv_draw_triangle.c  lv_draw_vbasic.c
src/display/lv_fonts/: lv_font_builtin.c  lv_font_dejavu_10.c  lv_font_dejavu_10_cyrillic.c  lv_font_dejavu_10_latin_sup.c  lv_font_dejavu_20.c  lv_font_dejavu_20_cyrillic.c  lv_font_dejavu_20_latin_sup.c  lv_font_dejavu_30.c  lv_font_dejavu_30_cyrillic.c  lv_font_dejavu_30_latin_sup.c  lv_font_dejavu_40.c  lv_font_dejavu_40_cyrillic.c  lv_font_dejavu_40_latin_sup.c  lv_font_monospace_8.c  lv_font_symbol_10.c  lv_font_symbol_20.c  lv_font_symbol_30.c  lv_font_symbol_40.c  pros_font_dejavu_mono_10.c  pros_font_dejavu_mono_20.c  pros_font_dejavu_mono_30.c  pros_font_dejavu_mono_40.c  pros_font_dejavu_mono_latin_sup_10.c  pros_font_dejavu_mono_latin_sup_20.c  pros_font_dejavu_mono_latin_sup_30.c  pros_font_dejavu_mono_latin_sup_40.c
src/display/lv_hal/: lv_hal_disp.c  lv_hal_indev.c  lv_hal_tick.c
src/display/lv_misc/: lv_anim.c  lv_area.c  lv_circ.c  lv_color.c  lv_font.c  lv_fs.c  lv_ll.c  lv_log.c  lv_math.c  lv_mem.c  lv_task.c  lv_templ.c  lv_trigo.c  lv_txt.c  lv_ufs.c
src/display/lv_misc/lv_fonts/: lv_font_dejavu_10.c  lv_font_dejavu_10_cyrillic.c  lv_font_dejavu_10_latin_sup.c  lv_font_dejavu_20.c  lv_font_dejavu_20_cyrillic.c  lv_font_dejavu_20_latin_sup.c  lv_font_dejavu_30.c  lv_font_dejavu_30_cyrillic.c  lv_font_dejavu_30_latin_sup.c  lv_font_dejavu_40.c  lv_font_dejavu_40_cyrillic.c  lv_font_dejavu_40_latin_sup.c  lv_font_symbol_10.c  lv_font_symbol_20.c  lv_font_symbol_30.c  lv_font_symbol_40.c  lv_symbol_def.h  pros_font_dejavu_mono_10.c  pros_font_dejavu_mono_10_latin_sup.c  pros_font_dejavu_mono_20.c  pros_font_dejavu_mono_20_latin_sup.c  pros_font_dejavu_mono_30.c  pros_font_dejavu_mono_30_latin_sup.c  pros_font_dejavu_mono_40.c  pros_font_dejavu_mono_40_latin_sup.c
src/display/lv_objx/: lv_arc.c  lv_bar.c  lv_btn.c  lv_btnm.c  lv_calendar.c  lv_canvas.c  lv_cb.c  lv_chart.c  lv_cont.c  lv_ddlist.c  lv_gauge.c  lv_img.c  lv_imgbtn.c  lv_kb.c  lv_label.c  lv_led.c  lv_line.c  lv_list.c  lv_lmeter.c  lv_mbox.c  lv_objx_templ.c  lv_page.c  lv_preload.c  lv_roller.c  lv_slider.c  lv_spinbox.c  lv_sw.c  lv_ta.c  lv_table.c  lv_tabview.c  lv_tileview.c  lv_win.c
src/display/lv_themes/: lv_theme.c  lv_theme_alien.c  lv_theme_default.c  lv_theme_material.c  lv_theme_mono.c  lv_theme_nemo.c  lv_theme_night.c  lv_theme_templ.c  lv_theme_zen.c
src/jinx/: README.md  cwpack.c  jinx.c  jinx_vdml.c
src/rtos/: CMakeLists.txt  README.md  heap_4.c  list.c  port.c  portmacro.h  queue.c  readme.md  refactor.sh  refactor.tsv  rtos.cpp  semphr.c  stream_buffer.c  task_notify_when_deleting.c  tasks.c  timers.c
src/system/: comp_state.c  cpp_support.cpp  envlock.c  hot.c  main.c  mlock.c  newlib_stubs.c  pthread.c  rtos_hooks.c  startup.c  system_daemon.c  time_date.c  time_date.cpp  unwind.c  user_functions.c  xilinx_vectors.s
src/system/dev/: dev_driver.c  file_system_stubs.c  ser_daemon.c  ser_driver.c  usd_driver.c  vfs.c
src/template/: autonomous.c  initialize.c
src/tests/: adi.cpp  basic_test.c  basic_test.cpp  errno_reentrancy.c  exceptions.cpp  ext_adi.cpp  generic_serial.cpp  generic_serial_file.cpp  gyro.c  gyro.cpp  mutexes.c  pnuematics.cpp  rtos_function_linking.c  segfault.c  segfault.cpp  semaphores.c  simple_names.c  simple_names.cpp  static_tast_states.c  vision_test.cpp
src/tmei/: graphics.c
src/vdml/: registry.c  vdml.c  vdml_adi.c  vdml_motors.c
template/: Makefile  common.mk  template.pros
tests/: testhost.cpp
(+196 files in other folders)
